minor fix #1
